<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UDelvr</string>
    <string name="title_activity_splash_screen">UDelvr</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_spash_screen">SpashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="email">Email</string>
    <string name="fullname">Full Name</string>
    <string name="mobilenumber">Mobile number</string>
    <string name="zip">Zip code</string>
    <string name="or">--- OR ----</string>


    <string name="password">Password</string>

    <string name="SignIn">Sign In</string>
    <string name="Register">Register</string>

    <string name="Signup">Register</string>
    <string name="UDelvr">UDelvr</string>


    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!--facebook credential -->
    <string name="facebook_app_id">790241384392743</string>

    <!--google credential-->
    <string name="google_app_id">AIzaSyA7lEkzf7_DDQa0omCPrMVeuCvXQCcv7vk</string>
    <string name="search_hint">Search Places</string>
    <string name="search_settings">Search Places</string>
    <string name="title_activity_on_map_transperent">OnMapTransperentActivity</string>
    <string name="title_activity_onmaphelp">Onmaphelp</string>
    <!--add_shipment.xml -->
    <string name="add_shipment">Add shipment</string>
    <string name="accept_shipment">Accept</string>

    <string name="recipient_name">Recipient\'s name</string>
    <string name="item_desc">Describe your package</string>
    <string name="weight">Package weight</string>
    <string name="price">How much you pay</string>
    <string name="pickup">Pick-up address</string>
    <string name="dropoff">Drop-off address</string>
    <string name="pickup_address">Where to pick up package</string>
    <string name="pickup_time">Pick up time</string>
    <string name="pickup_date">Pick up date</string>
    <string name="button_add_shipment">Add shipment</string>
    <string name="title_activity_add_shipment">Add Shipment</string>
    <!--be a driver.xml-->
    <string name="driver_license">Your valid driver license</string>
    <!--<string name="day_expire">dd</string>-->
    <!--<string name="month_expire">mm</string>-->
    <!--<string name="year_expire">yy</string>-->
    <string name="date_expire">Expired by: mm/dd/yy</string>
    <string name="apply">Apply</string>
    <string name="camera_license">Take picture of your license</string>

    <!-- Drivers Nav Drawer Menu Items -->
    <string-array name="driver_nav_drawer_items">
        <item >Driver Home</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>
    <!-- Driver's Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="driver_nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!--map-->
    <!-- UI -->
    <string name="profils">Profils</string>
    <string name="geofence1">Geofence </string>
    <string name="geofence2">Geofence </string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="menu_item_clear_geofence1">Clear geofence</string>
    <string name="menu_item_clear_geofence2">Clear geofence</string>
    <string name="menu_item_clear_all_geofences">Clear all geofences</string>
    <string name="menu_item_clear_geofence_history">Clear stored geofences</string>
    <string name="radius">Radius</string>
    <string name="action_search">Search</string>
    <string name="gotit"> GOT IT </string>


</resources>
