<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".SigninActivity"
    android:id="@+id/signinscreen"
    android:background="@color/udelvr_black_green"
    >

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/UDelvr"
            android:textColor="@color/udelvr_white"
            android:textSize="50dp"
            android:id="@+id/textView"
            android:drawableLeft="@drawable/udelvr"
            android:typeface="monospace"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="fill_parent"
            android:drawablePadding="20dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText"
            android:hint="@string/email"
            android:textColor="@color/udelvr_white"
            android:textColorHint="@color/udelvr_hint_white"
            android:drawableLeft="@drawable/email"
            android:layout_marginTop="50dp"
             />

        <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:drawablePadding="20dp"
        android:ems="10"
        android:id="@+id/editText2"
        android:textColor="@color/udelvr_white"
        android:hint="@string/password"
        android:textColorHint="@color/udelvr_hint_white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/password"

          android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_vertical" />

        <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:id="@+id/button_signin"
        android:background="@drawable/roundedgraybutton"
        android:padding="10dp"
            android:layout_marginTop="15dp"
        android:textColor="@color/udelvr_gray"
        android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Signup"
            android:id="@+id/button_signup"
            android:background="@drawable/roundedgraybutton"
            android:padding="10dp"
            android:textColor="@color/udelvr_gray"
            android:layout_marginTop="15dp"
            android:layout_gravity="bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/or"
            android:textColor="@color/udelvr_white"
            android:textSize="20dp"
            android:id="@+id/textView"
            android:typeface="monospace"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp" />

        <!-- facebook login button -->
        <com.facebook.widget.LoginButton
            android:id="@+id/authButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/button_signup"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"/>

    </LinearLayout>
</ScrollView>
