<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/driver_shipment_activity"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="com.tesla.prasadshirsath.tesla.SignupDetails"
    android:background="@color/udelvr_white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/packageDestinationStaticMap"
            android:src="@drawable/udelvr_driver"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/item_desc"
            android:hint="@string/item_desc"
            android:textSize="18sp"
            android:textColor="@color/counter_text_bg"
            android:textColorHint="@color/udelvr_hint_white"
            android:layout_below="@+id/packageDestinationStaticMap"
            />
        <LinearLayout
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_below="@+id/item_desc"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:hint="@string/weight"
                android:textSize="18sp"

                android:ems="10"
                android:layout_marginTop="15dp"
                android:id="@+id/item_weight"
                android:textColor="@color/counter_text_bg"
                android:textColorHint="@color/udelvr_hint_white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:textSize="18sp"

                android:hint="@string/price"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:id="@+id/item_price"
                android:textColor="@color/counter_text_bg"
                android:textColorHint="@color/udelvr_hint_white"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/recipient_name"
            android:textColorHint="@color/udelvr_hint_white"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:id="@+id/recipient"
            android:textColor="@color/counter_text_bg"
            android:layout_below="@+id/item"
            android:layout_alignEnd="@+id/pickup_layout"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/pickup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/recipient"
            android:orientation="horizontal"
            android:layout_alignEnd="@+id/drop_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pickup"
                android:ems="10"
                android:id="@+id/pickup_address"
                android:textColor="@color/counter_text_bg"
                android:textColorHint="@color/udelvr_hint_white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/streetview_pickup"
                android:src="@drawable/streetview"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageView_pickup_address"
                android:src="@drawable/navigate"
                android:layout_centerHorizontal="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/drop_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_below="@+id/pickup_layout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dropoff"
                android:ems="10"
                android:id="@+id/drop_address"
                android:textColor="@color/counter_text_bg"
                android:textColorHint="@color/udelvr_hint_white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/streetview_dropoff"
                android:src="@drawable/streetview"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageView_dropoff_address"
                android:src="@drawable/navigate"
                android:layout_centerHorizontal="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timePicker_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/drop_layout"
            android:layout_alignEnd="@+id/datePicker_row"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/pickup_time"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:id="@+id/pickup_time"
                android:textColor="@color/counter_text_bg"
                android:textColorHint="@color/udelvr_hint_white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/clock1"
                android:id="@+id/imageView_timePicker"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/datePicker_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/timePicker_row"
            android:orientation="horizontal"
            android:layout_alignEnd="@+id/button_add_shipment">
            <TextView
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/pickup_date"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:id="@+id/pickup_date"
                android:textColor="@color/counter_text_bg"
                android:textColorHint="@color/udelvr_hint_white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/calendar"
                android:id="@+id/imageView_datePicker"/>
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_shipment"
            android:textColor="@color/udelvr_white"
            android:id="@+id/button_accept_shipment"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/datePicker_row"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/udelvr_blue"/>

    </RelativeLayout>
</ScrollView>