<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentaddshipment"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="com.tesla.prasadshirsath.tesla.SignupDetails"
    android:background="@color/udelvr_white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/recipient_name"
            android:textColorHint="@color/udelvr_hint_white"
            android:ems="10"
            android:id="@+id/recipient"
            android:layout_marginTop="40dp"
            android:textColor="@color/black_overlay"
            android:layout_alignEnd="@+id/address"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/address"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:id="@+id/address"
            android:textColor="@color/black_overlay"
            android:textColorHint="@color/udelvr_hint_white"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/recipient"
            android:layout_alignEnd="@+id/pickup_address" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/pickup_address"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:id="@+id/pickup_address"
            android:textColor="@color/black_overlay"
            android:textColorHint="@color/udelvr_hint_white"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/address"
            android:layout_alignEnd="@+id/item_desc" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_desc"
            android:hint="@string/item_desc"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/pickup_address"
            android:textColor="@color/black_overlay"
            android:textColorHint="@color/udelvr_hint_white"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@+id/item_weight"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/weight"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:id="@+id/item_weight"
            android:textColor="@color/black_overlay"
            android:textColorHint="@color/udelvr_hint_white"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/item_desc"
            android:layout_alignEnd="@+id/timePicker_row" />


        <LinearLayout
            android:id="@+id/timePicker_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@+id/datePicker_row"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/item_weight"
            android:orientation="horizontal"
            >
            <EditText
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/pickup_time"
                android:ems="10"
                android:id="@+id/pickup_time"
                android:textColor="@color/black_overlay"
                android:textColorHint="@color/udelvr_hint_white"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time picker"
                android:id="@+id/timePicker"/>
        </LinearLayout>

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Time picker"-->
            <!--android:id="@+id/timePicker"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_below="@+id/item_weight"-->
            <!--android:layout_alignEnd="@+id/datePicker"/>-->

        <LinearLayout
            android:id="@+id/datePicker_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@+id/camera"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/timePicker_row"
            android:orientation="horizontal"
            >
            <EditText
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/pickup_date"
                android:ems="10"
                android:id="@+id/pickup_date"
                android:textColor="@color/black_overlay"
                android:textColorHint="@color/udelvr_hint_white"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date picker"
                android:id="@+id/datePicker"/>
        </LinearLayout>


        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Date Picker"-->
            <!--android:id="@+id/datePicker"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_below="@+id/timePicker"-->
            <!--android:layout_alignEnd="@+id/camera"/>-->


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Take picture"
            android:id="@+id/camera"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/datePicker_row"
            android:layout_alignEnd="@+id/button_add_shipment"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_shipment"
            android:textColor="@color/udelvr_white"
            android:id="@+id/button_add_shipment"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/camera"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/udelvr_blue"/>

    </RelativeLayout>
</ScrollView>